--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "eslint-config-airbnb": "^17.1.0",
+    "express": "^4.16.3",
     "knex": "^0.15.2",
     "pg": "^7.5.0"
   }
