--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "knex": "^0.15.2",
     "nightmare": "^3.0.1",
+    "nodemon": "^1.18.4",
     "pg": "^7.5.0"
   }
 }
