--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.3",
     "knex": "^0.15.2",
