--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 services:
   - postgresql
 before_script:
-  - psql -c 'create database travis_tests;' -U postgres
+  - psql -c 'create database who_are_you_tests;' -U postgres
 notifications:
   email: false
