--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.3",
     "knex": "^0.15.2",
